# metanode

./: .gitignore  .golangci.yml  AGENTS.md  CLAUDE.md  PROJECT_STRUCTURE.md  auto_test.sh  compile_output.txt  docker-compose.yml  generate_tx.py  go.sum  rewrite_tx.py  run.sh  skills-lock.json  test_sort.rs
consensus/: .gitignore  (+6 more)
consensus/client/: Cargo.toml
consensus/client/src/: main.rs  node.rs
consensus/metanode/: Cargo.toml  auto_restore.sh  config_examples.md  node.d  private.d  transaction_flow.md  verify_epoch_transition.sh  wait_and_restore.sh
consensus/metanode/config/: node_0.toml  node_1.toml  node_2.toml  node_3.toml  node_4.toml  node_network_example.toml
consensus/metanode/deploy/: install-services.sh  metanode-go-sub@.service  metanode-rust@.service
consensus/metanode/deploy/config-templates/: metanode-logrotate.conf
consensus/metanode/deploy/monitoring/: docker-compose.yml  install-baremetal.sh
consensus/metanode/deploy/nginx/: install-nginx.sh  metanode.conf
consensus/metanode/docs/: CONSENSUS_ARCHITECTURE_VN.md  NODE_RESTART_ARCHITECTURE.md  epoch_transition_moved_workflow.md  original_epoch_monitor_workflow.md  recover_sync_catchup_flow.md  rust_block_finalization_flow.md  start_unified_epoch_monitor_detail.md  synconly_demotion_flow.md
consensus/metanode/docs/block_flow_go_rust/: block_flow_go_rust.md  commit_processor_explained.md
consensus/metanode/docs/block_flow_go_rust/explain_func/: start_unified_epoch_monitor_detail.md
consensus/metanode/meta-consensus/: scratch_clock.rs
consensus/metanode/meta-consensus/config/: Cargo.toml
consensus/metanode/meta-consensus/config/src/: parameters.rs
consensus/metanode/meta-consensus/core/: Cargo.toml  build.rs
consensus/metanode/meta-consensus/core/src/: adaptive_delay.rs  authority_node.rs  authority_service.rs  base_committer.rs  block.rs  block_manager.rs  block_verifier.rs  broadcaster.rs  commit.rs  commit_consumer.rs  commit_finalizer.rs  commit_observer.rs  commit_syncer.rs  commit_syncer_state.md  commit_vote_monitor.rs  context.rs  coordination_hub.rs  core.rs  core_signals.rs  core_tests.rs  core_thread.rs  dag_state_actor.rs  error.rs  leader_schedule.rs  leader_scoring.rs  lib.rs  linearizer.rs  metrics.rs  proposed_block_handler.rs  recovery_barrier.rs  round_prober.rs  stake_aggregator.rs  subscriber.rs  synchronizer.rs  system_transaction_provider.rs  test_dag.rs  test_dag_builder.rs  transaction.rs
consensus/metanode/meta-consensus/meta-http/src/: lib.rs  listener.rs
consensus/metanode/meta-consensus/meta-tls/src/: certgen.rs
consensus/metanode/meta-consensus/types/: Cargo.toml
consensus/metanode/monitoring/: dashboard.html  monitor.py  start_monitor.sh
consensus/metanode/new_node_keys/: committee.json  node_0.toml  node_0_authority_key.json  node_0_network_key.json  node_0_protocol_key.json
consensus/metanode/proto/: executor.proto  validator_rpc.proto
consensus/metanode/scripts/: CLUSTER_OPERATIONS.md  README.md  auto_test_snapshot.sh  automate_ai_debugging.sh  build_check.sh  check_blocks_proof.sh  clean_reports.sh  e2e_test_suite.sh  generate_genesis_from_rust_keys.sh  mtn-orchestrator.sh  node1_b807.json  root_cause_explanation.md  spam_test.sh  test_4201.go  test_background.sh  test_epoch_stress.sh  test_genesis_mismatch.sh  test_genesis_mismatch_multi_epoch.sh  test_restart_loop.sh  test_single_restart.sh  test_snapshot_recovery_e2e.sh  test_snapshot_stability_loop.sh  test_validator_restart_rejoin.sh  trace_transaction.sh  track_exit.sh  update_committee_from_genesis.py
consensus/metanode/scripts/logs/: follow.sh  rust.sh
consensus/metanode/scripts/node/: build.sh  deploy-3machines.env  deploy.env  deploy_cluster.sh  deploy_logs.sh  fresh_restart.sh  fresh_restart_with_sync.sh  reset_node.sh  restore_node.md  restore_node.sh  resume_all.sh  resume_node.sh  resume_node_ai.sh  run_all.sh  run_all_validator.sh  run_node.sh  run_node_0.sh  run_nodes_123.sh  setup_node_0.sh  setup_node_1.sh  setup_node_2.sh  setup_node_3.sh  setup_node_4.sh  test_snapshot_restore.sh  test_snapshot_restore_ai.sh  update_ips.sh
consensus/metanode/scripts/node/docs/: deploy_cluster.md
consensus/metanode/scripts/tests/: test_lvm_config.sh  test_sudo_snapshot.sh
consensus/metanode/src/: config.rs  ffi.rs  lib.rs
consensus/metanode/src/consensus/: commit_callbacks.rs  epoch_transition.rs  mod.rs  state_attestation.rs  tx_recycler.rs
consensus/metanode/src/network/: codec.rs  mod.rs  rpc.rs  tx_socket_server.rs
consensus/metanode/src/node/: block_coordinator.rs  block_delivery.rs  catchup.rs  committee.rs  committee_source.rs  consensus_node.rs  coordinator.rs  dual_stream.rs  epoch_monitor.rs  epoch_store.rs  epoch_transition_manager.rs  epoch_transition_tests.rs  health_check.rs  mod.rs  mtn-simple-2025.code-workspace  node_methods.rs  notification_listener.rs  peer_health.rs  queue.rs  recovery.rs  startup.rs  sync.rs  sync_controller.rs  tx_submitter.rs
consensus/metanode/src/types/: transaction.rs  tx_hash.rs
crates/meta-macros/: Cargo.toml
crates/meta-macros/src/: lib.rs
crates/meta-proc-macros/: Cargo.toml
crates/meta-proc-macros/src/: lib.rs
crates/meta-protocol-config/: Cargo.toml
crates/meta-protocol-config-macros/: Cargo.toml
crates/meta-tls/: Cargo.toml
crates/meta-tls/src/: certgen.rs
crates/mysten-common/: Cargo.toml
crates/mysten-common/src/: random_util.rs
crates/mysten-metrics/: Cargo.toml
crates/mysten-network/: Cargo.toml
crates/mysten-network/src/: config.rs
crates/shared-crypto/: Cargo.toml
crates/typed-store/: Cargo.toml
crates/typed-store-error/: Cargo.toml
crates/typed-store/src/rocks/: mod.rs  options.rs
execution/pkg/mvm/linker/: CMakeLists.txt
execution/pkg/nomt_ffi/rust_lib/: Cargo.toml
metanode/meta-consensus/config/: Cargo.toml
metanode/meta-consensus/config/src/: parameters.rs
metanode/meta-consensus/meta-tls/: Cargo.toml
metanode/meta-consensus/meta-tls/src/: lib.rs  verifier.rs
pkg/mvm/c_mvm/: CMakeLists.txt
pkg/mvm/c_mvm/src/: stack.cpp
pkg/mvm/c_mvm/tests/: harness.cpp  rlp.cpp
(+1673 files in other folders)
