[package]
name = "meta-macros"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }

[dependencies]
meta-proc-macros = { path = "../meta-proc-macros" }
once_cell = "1.18.0"
futures = "0.3.28"
tracing = "0.1.37"
