[package]
name = "meta-protocol-config-macros"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.47"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
quote = "1.0.23"
