[package]
name = "mysten-common"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
version = "0.1.0"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }

[dependencies]
rand = "0.8.5"
antithesis_sdk = "0.2.5"
either = "1.8.0"
snap = "1.1.0"
once_cell = "1.18.0"
tokio = "=1.47.1"
futures = "0.3.28"
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
mysten-metrics = { path = "../mysten-metrics" }
meta-macros = { path = "../meta-macros" }
tempfile = "3.20.0"
tracing = "0.1.37"
anyhow = "1.0.71"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
