[package]
name = "mysten-metrics"
version = "0.7.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }

[dependencies]
axum = { version = "0.8", default-features = false, features = ["macros", "tokio", "http1", "http2", "json", "matched-path", "original-uri", "form", "query", "ws"] }
tracing = "0.1.37"
scopeguard = "1.1"
prometheus = "0.13.3"
once_cell = "1.18.0"
tap = "1.0.1"
tokio = "=1.47.1"
dashmap = "5.5.3"
uuid = { version = "1.0", features = ["v4", "serde"] }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
futures = "0.3.28"
async-trait = "0.1.61"
prometheus-closure-metric = { path = "../prometheus-closure-metric" }
simple-server-timing-header = "0.1.1"
