[package]
name = "mysten-network"
version = "0.2.0"
license = "Apache-2.0"
edition = "2024"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
description = "Mysten's network tooling"
publish = false

[dependencies]
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anyhow = "1.0.71"
async-stream = "0.3.6"
bcs = "0.1.4"
bytes = { version = "1.5.0", features = ["serde"] }
dashmap = "5.5.3"
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
futures = "0.3.28"
http = "1"
http-body = "1"
mysten-metrics = { path = "../mysten-metrics" }
multiaddr = "0.17.0"
prometheus = "0.13.3"
quinn-proto = "0.11.7"
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive", "rc"] }
once_cell = "1.18.0"
snap = "1.1.0"
hyper-rustls = { version = "0.27", default-features = false, features = ["webpki-roots", "http1", "http2", "ring", "tls12"] }
hyper-util = "0.1.6"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
tokio = { version = "=1.47.1", features = ["sync", "rt", "macros"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tonic = { version = "0.14.2", features = ["zstd", "transport", "tls-webpki-roots"] }
tonic-health = "0.14.2"
tower = { version = "0.5", features = ["full", "util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "full", "trace", "set-header", "propagate-header"] }
pin-project-lite = "0.2.13"
tracing = "0.1.37"
meta-http = { path = "../meta-http" }

[dev-dependencies]
meta-tls = { path = "../meta-tls" }
