[package]
name = "shared-crypto"
version = "0.0.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2024"

[dependencies]
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde_repr = "0.1"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c", features = ["copy_key"] }
eyre = "0.6.8"
bcs = "0.1.4"
