[package]
name = "typed-store-error"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Ade A. <ade@mystenlabs.com>"]
description = "error types for typed-store crate"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1.0.144", features = ["derive", "rc"] }
thiserror = "1.0.40"
