[package]
name = "typed-store"
version = "0.4.0"
license = "Apache-2.0"
authors = ["Francois Garillot <francois@mystenlabs.com>"]
description = "a typed database interface"
repository = "https://github.com/mystenlabs/mysten-infra"
edition = "2024"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
  'cfg(msim)',
  'cfg(fail_points)',
] }

[dependencies]
anyhow = "1.0.71"
backoff = { version = "0.4.0", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
bcs = "0.1.4"
bincode = "1.3.3"
collectable = "0.0.2"
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
fdlimit = "0.2.1"
once_cell = "1.18.0"
tap = "1.0.1"
prometheus = "0.13.3"
hdrhistogram = "7.5.1"
rocksdb = { version = "0.22.0", default-features = false, features = ["snappy", "lz4", "zstd", "zlib", "multi-threaded-cf"] }
serde = { version = "1.0.144", features = ["derive", "rc"] }
thiserror = "1.0.40"
tokio = { version = "=1.47.1", features = ["full", "test-util"] }
tracing = "0.1.37"
typed-store-error = { path = "../typed-store-error" }
typed-store-derive = { path = "../typed-store-derive" }
typed-store-workspace-hack = { path = "../typed-store-workspace-hack" }
meta-macros = { path = "../meta-macros" }
rand = "0.8.5"
async-trait = "0.1.61"
itertools = "0.13.0"
mysten-common = { path = "../mysten-common" }
mysten-metrics = { path = "../mysten-metrics" }
[target.'cfg(not(windows))'.dependencies]
tidehunter = {git = "https://github.com/andll/tidehunter.git", rev = "dd686f055375aa8fa2145618301bdfd5170a2a6b", version = "0.1.0", optional = true}

[target.'cfg(not(target_env = "msvc"))'.dependencies]
rocksdb = { version = "0.22.0", default-features = false, features = ["jemalloc"] }

[dev-dependencies]
tempfile = "3.20.0"
once_cell = "1.18.0"
rstest = "0.16.0"
rand = "0.8.5"
uint = "0.10.0"
