[package]
name = "consensus-config"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)'] }

[dependencies]
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }
mysten-network = { path = "../../../crates/mysten-network" }
rand = "0.8.5"
serde = { version = "1.0.144", features = ["derive", "rc"] }
shared-crypto = { path = "../../../crates/shared-crypto" }

[dev-dependencies]
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
