[package]
name = "meta-tls"
version = "0.0.1"
license = "Apache-2.0"
authors = ["Brandon Williams <brandon@mystenlabs.com>"]
description = "tools for rustls-based certificate generation and verification"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.71"
arc-swap = "1.5.1"
ed25519 = { version = "2", features = ["pkcs8", "alloc", "zeroize"] }
pkcs8 = { version = "0.10.0", features = ["std"] }
rcgen = "0.13"
rustls = "0.23"
webpki = { version = "0.103", package = "rustls-webpki", features = ["alloc", "std"] }
x509-parser = "0.18"

fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "4db0e90c732bbf7420ca20de808b698883148d9c" }

# reqwest support
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }

# Axum support - removed axum-server to avoid compilation issues
# Using compatible versions instead
axum = { version = "0.8", default-features = false, features = ["macros", "tokio", "http1", "http2", "json"] }
# axum-server removed - will use alternative implementation
tokio-rustls = { version = "0.26", default-features = false }
tower-layer = "0.3"
tokio = { version = "1.36.0", default-features = false, features = ["macros"] }

[dev-dependencies]
rand = "0.8.5"

# Removed axum-server dependency to avoid compilation issues
# Patch hyper-util to compatible version if needed
# [patch.crates-io]
# hyper-util = { version = "0.1.10", features = ["tokio", "server-auto", "service"] }
