[package]
name = "consensus-config"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)'] }

[dependencies]
fastcrypto = { workspace = true }
mysten-network = { path = "../../../../crates/mysten-network" }
rand = { workspace = true }
serde = { workspace = true }
shared-crypto = { path = "../../../../crates/shared-crypto" }

[dev-dependencies]
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
