[package]
name = "consensus-core"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)'] }

[dependencies]
anyhow = { workspace = true }
arc-swap = "1.5.1"
async-trait = { workspace = true }
base64 = { workspace = true }
bcs = { workspace = true }
bytes = { version = "1.5.0", features = ["serde"] }
cfg-if = "1.0.0"
consensus-config = { path = "../config" }
consensus-types = { path = "../types" }
dashmap = "5.5.3"
enum_dispatch = "^0.3"
eyre = "0.6.8"
fastcrypto = { workspace = true }
futures = "0.3.28"
http = "1"
itertools = { workspace = true }
quinn-proto = "0.11.7"
mockall = "0.11.4"
mysten-common = { path = "../../../../crates/mysten-common" }
mysten-metrics = { path = "../../../../crates/mysten-metrics" }
mysten-network = { path = "../../../../crates/mysten-network" }
nom = "7.1.3"
parking_lot = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
rustls = "0.23"
serde = { workspace = true }
shared-crypto = { path = "../../../../crates/shared-crypto" }
strum_macros = "0.26"
meta-macros = { path = "../../../../crates/meta-macros" }
meta-protocol-config = { path = "../../../../crates/meta-protocol-config" }
meta-tls = { path = "../meta-tls" }
tap = "1.0"
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = "0.7.10"
tonic = { workspace = true }
tonic-prost = { workspace = true }
tower = { version = "0.5", default-features = false, features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = { workspace = true }
typed-store = { path = "../../../../crates/typed-store" }
tonic-rustls = "0.3.0"
# Use local copy of meta-http (without dev-dependencies)
meta-http = { path = "../meta-http" }

[dev-dependencies]
criterion = { version = "0.5.0", features = ["async", "async_tokio", "html_reports"] }
rstest = "0.16.0"
tempfile = { workspace = true }
telemetry-subscribers = { path = "../../../../crates/telemetry-subscribers" }

[build-dependencies]
tonic-build = { workspace = true }

[[bench]]
name = "commit_finalizer_bench"
harness = false

[[bench]]
name = "transaction_throughput_bench"
harness = false

